# DiscordBots

./: README.md
OctoBot/: README.md  bot.js  main.js  package-lock.json
SkyBlock Isles/: README.md  bot.py  cmds.py  data.json  help.py  images.json  utils.py  xpChart.json
SkyBot/: README.md  bot.js  package-lock.json
SkyBot Python/: README.md  bot.db  bot.py  dev.py  fun.py  guild.py  level.py  music.py  requests.txt  run.sh  skybucks.py  test.py  utility.py  zlash_bot.py  zlash_cog.py
SkyBot Rust/: .gitignore  Cargo.toml  README.md
SkyBot Rust/src/: main.rs
SkyBot Rust/src/commands/: help.rs  mod.rs  music.rs  utility.rs
SkyBot Rust/src/events/: command_events.rs  mod.rs
SkyBot Rust/src/utils/: utilities.rs
SkyBot-OLD/: README.md  bot.js  config.json  junk code.js  package-lock.json  package.json
