[package]
name = "skybot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "cache",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice"
]
version = "0.11"

[dependencies.songbird]
version = "0.3.0"
features = ["default", "builtin-queue", "yt-dlp"]

[profile.release]
lto = true
opt-level = 3